<resources>

    <string-array name="components">
        <item>Supermarket</item>
        <item>Clothes</item>
        <item>Phones</item>
        <item>Kitchen</item>
        <item>Games</item>
        <item>Health</item>
        <item>Electrical</item>
        <item>Cleaners</item>
    </string-array>
    <string name="app_name">online shop</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="facebook_app_id" translatable="false">373734473585753</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb373734473585753</string>


    <string name="user_name" translatable="true">User Name</string>
    <string name="email" translatable="true">email</string>
    <string name="phone">phone number</string>
    <string name="action_settings">Settings</string>
    <string name="address">address</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>

    <string name="home_second" translatable="false">Home Second</string>
    <string name="communicate">Communicate with us</string>
    <string name="waiting">Waiting list</string>
    <string name="car">car</string>
    <string name="solded">solded</string>
    <string name="register">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="skip">Continue as a guest</string>
    <string name="sign_up_message">Sign up in our app to access all features and save items.</string>
    <string name="name_hint">Enter Your Name</string>
    <string name="email_hint">Enter your Email</string>
    <string name="password_hint">Enter your password</string>
    <string name="password">Password</string>
    <string name="log_in_message">Log In your account by your facebook , twitter or email.</string>
    <string name="log_out">Log out</string>
    <string name="liked">Liked Products</string>
    <string name="language">Language</string>
    <string name="rate">Rate the App in playstore</string>

    <string name="verification">Enter the verification code</string>
    <string name="supermarket">Supermarket</string>
    <string name="phones">Phones</string>
    <string name="electrical">Electrical Devices</string>
    <string name="kitchen">Kitchen</string>
    <string name="cleaners">Cleaning</string>
    <string name="clothes">Clothes and shoes</string>
    <string name="health">Health and Beauty</string>
    <string name="toys">Games</string>
    <string name="quantity">Quantity</string>
    <string name="seller">Seller name</string>
    <string name="buy">Buy</string>
    <string name="address_hint">your address</string>
    <string name="phone_number">your phone number</string>
    <string name="complete">complete registeration</string>
    <string name="add_to_cart">Add to cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="total_price">total price:</string>
</resources>
