<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="11"
    tools:context=".AdminPanel">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Adding new products"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        />

    <Button
        android:id="@+id/add_clothes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/clothes"
        style="@style/admin_category_btn"/>

    <Button
        android:id="@+id/add_supermarket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/supermarket"
        style="@style/admin_category_btn"/>

    <Button
        android:id="@+id/add_cleaners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/cleaners"
        style="@style/admin_category_btn"/>

    <Button
        android:id="@+id/add_kitchen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/kitchen"
        style="@style/admin_category_btn"/>

    <Button
        android:id="@+id/add_health"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/health"
        style="@style/admin_category_btn"/>

    <Button
        android:id="@+id/add_electrical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/electrical"
        style="@style/admin_category_btn"/>

    <Button
        android:id="@+id/add_phones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/phones"
        style="@style/admin_category_btn"/>

    <Button
        android:id="@+id/add_games"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/toys"
        style="@style/admin_category_btn"/>

</LinearLayout>