<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".start.Sign_up">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/colorPrimary" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="serif"
            android:shadowColor="@android:color/holo_blue_bright"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="15"
            android:text="@string/register"
            android:textColor="@android:color/primary_text_dark"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="sans-serif-medium"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="15"
            android:text="@string/sign_up_message"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:elevation="10dp"
                app:cardCornerRadius="20dp">

                <com.balysv.materialripple.MaterialRippleLayout
                    style="@style/ripple_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="3dp">

                    <Button
                        android:id="@+id/google_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@color/white"
                        android:drawableLeft="@drawable/ic_google_logo"
                        android:elevation="10dp"
                        android:paddingLeft="8dp"
                        android:text="Google"
                        android:textColor="@android:color/tertiary_text_light"
                        android:textSize="20dp" />
                </com.balysv.materialripple.MaterialRippleLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_weight="1"
                android:elevation="10dp"
                app:cardCornerRadius="20dp">

                <com.balysv.materialripple.MaterialRippleLayout
                    style="@style/ripple_buttonWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/fb"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:textSize="20sp" />

                </com.balysv.materialripple.MaterialRippleLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:elevation="20dp"
            app:cardCornerRadius="20dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_shopping_cart" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/user_name"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="16sp"
                        android:textStyle="bold"></TextView>

                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_hint"
                        android:inputType="textPersonName" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/email"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="16sp"
                        android:textStyle="bold"></TextView>

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/address"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="16sp"
                        android:textStyle="bold"></TextView>

                    <EditText
                        android:id="@+id/et_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address_hint"
                        android:inputType="textEmailAddress" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/phone_number"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="16sp"
                        android:textStyle="bold"></TextView>

                    <EditText
                        android:id="@+id/et_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:inputType="phone" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/password"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="16sp"
                        android:textStyle="bold"></TextView>

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword" />
                </LinearLayout>
            </ScrollView>
            >

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/twitter_btn"
            android:padding="5dp"
            android:shadowColor="@color/colorPrimary"
            android:shadowDx="5"
            android:shadowDy="5"
            android:text="@string/register"
            android:textColor="@android:color/primary_text_dark_nodisable"
            android:textSize="18sp" />
    </LinearLayout>


</RelativeLayout>