<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/primary_text_dark"
    tools:context=".AddingUser">

    <androidx.cardview.widget.CardView
        android:id="@+id/choose_profile_pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="20dp"
        app:cardCornerRadius="20dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:src="@drawable/profile"
                app:civ_border_color="#FF000000"
                app:civ_border_width="1dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="60dp"
                android:background="@android:color/darker_gray"
                android:gravity="center"
                android:text="choose profile image"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </FrameLayout>
    </androidx.cardview.widget.CardView>
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choose_profile_pic"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:paddingVertical="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/user_name"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp"
                    android:textStyle="bold"></TextView>

                <EditText
                    android:id="@+id/et_nameaaa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_hint"
                    android:inputType="textPersonName" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/address"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp"
                    android:textStyle="bold"></TextView>

                <EditText
                    android:id="@+id/et_addressaaa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address_hint"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/phone_number"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="16sp"
                    android:textStyle="bold"></TextView>

                <EditText
                    android:id="@+id/et_phone_numberaaa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:inputType="textPassword" />
            </LinearLayout>
        </ScrollView>
        >


    </androidx.cardview.widget.CardView>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cv_data"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:background="@color/twitter_btn"
        android:shadowColor="@color/colorPrimary"
        android:shadowDx="5"
        android:shadowDy="5"
        android:text="@string/complete"
        android:textColor="@android:color/primary_text_dark_nodisable"
        android:textSize="18sp"

        />
</RelativeLayout>