<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="40dp"
    android:background="@drawable/profile_bg"
    tools:context=".Profile">

    <com.google.android.material.circularreveal.CircularRevealFrameLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/user_pic"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_launcher_foreground"
            android:id="@+id/change_image"/>
    </com.google.android.material.circularreveal.CircularRevealFrameLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp"
        android:layout_below="@+id/user_pic"
        android:layout_marginTop="20dp"
        android:id="@+id/cv_email_user"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingVertical="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@android:color/holo_blue_dark"
            android:fontFamily="monospace"
            android:gravity="center"
            android:textSize="25dp"
            android:id="@+id/tv_name"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#A3A5A8"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="70dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:gravity="center"
            android:textSize="25dp"
            android:textColor="@android:color/holo_blue_dark"
            android:fontFamily="monospace"
            android:id="@+id/tv_email"
            /></LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp"
        android:layout_below="@+id/cv_email_user"
        android:layout_marginTop="20dp"
        android:id="@+id/cv_settings"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/liked"
            android:textSize="20sp"
            android:textColor="@android:color/holo_blue_dark"
            android:drawableEnd="@drawable/ic_favorite"
            android:gravity="center"
            android:paddingEnd="10dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/liked_products"
            />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#A3A5A8"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="70dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rate"
                android:textSize="20sp"
                android:textColor="@android:color/holo_blue_dark"
                android:drawableEnd="@drawable/ic_baseline_rate_review_24"
                android:gravity="center"
                android:paddingEnd="10dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/rate"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp"
        android:layout_below="@+id/cv_settings"
        android:layout_marginTop="50dp"

        android:id="@+id/cv_log_out"
        >
        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ripple_button">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                android:background="@color/colorPrimary"
                android:id="@+id/log_out_btn"

                />
        </com.balysv.materialripple.MaterialRippleLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>