<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Start"
    android:orientation="vertical">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/store_icon"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="0dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:clickable="true"
        android:id="@+id/skip"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingEnd="20dp"
            android:paddingTop="3dp"
            android:drawableEnd="@drawable/ic_forward"
            />

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:clickable="true"

        >
        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ripple_button">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                android:background="@color/colorPrimary"
                android:id="@+id/sign_up_activity"

                />
        </com.balysv.materialripple.MaterialRippleLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        android:clickable="true"

        >
        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ripple_button"
            android:clickable="true"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textColor="@android:color/tertiary_text_dark"
                android:textStyle="bold"
                android:textSize="16sp"
                android:background="@drawable/login_btn"
                android:id="@+id/log_in_btn"
                />
        </com.balysv.materialripple.MaterialRippleLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>